--- a/src/resources/elements/home/weather-main/weather-main.html
+++ b/src/resources/elements/home/weather-main/weather-main.html
@@ -13,7 +13,7 @@
         </div>
         <div class="item__weather-temperature">
           <span class="item__temperature-degree">${city.temperature}</span>
-          <span class="item__icon"></span>
+          <img class="item__icon" src.bind="city.icon"></img>
         </div>
       </div>
     </div>
