refactoring code, add value converter

--- a/src/resources/elements/home/weather-main/weather-main.html
+++ b/src/resources/elements/home/weather-main/weather-main.html
@@ -1,21 +1,29 @@
 <template>
   <require from="./weather-main.scss"></require>
+  <require from="./view-pages-pagination"></require>
+  <require from="./set-class-by-weather"></require>
 
   <div class="au-add-city">
     <compose view-model="./add-city/add-city"></compose>
   </div>
   <div class="au-main__list">
-    <div class="list__item item-weather ${city.class}" repeat.for="city of cities">
-      <div class="item">
-        <div class="item__main-information">
-          <span class="item__name">${city.name}</span>
-          <span class="item__weather-type">${city.weather}</span>
-        </div>
-        <div class="item__weather-temperature">
-          <span class="item__temperature-degree">${city.temperature}</span>
-          <img class="item__icon" src.bind="city.icon"></img>
+    <div class="list">
+      <div class="list__item item-weather ${city.class | setClassByWeather:city:city.weather:city.mode}" repeat.for="city of cities | pages:activePage:visiblePageLinks">
+        <div class="item">
+          <div class="item__main-information">
+            <span class="item__name">${city.name} <span class="name__country">(${city.country})</span></span>
+            <span class="item__weather-type">${city.weather}</span>
+          </div>
+          <div class="item__weather-temperature">
+            <span class="item__temperature-degree">${city.temperature}</span>
+            <img class="item__icon" src.bind="city.icon"></img>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="au-main__pagination">
+      <md-pagination md-on-page-changed.delegate="onPageChanged($event)" pages.bind="overallPageLinks" visible-page-links.two-way="visiblePageLinks"
+        active-page.bind="activePage"></md-pagination>
     </div>
   </div>
 </template>
