add canvas for drawing background

--- a/src/resources/elements/home/home.html
+++ b/src/resources/elements/home/home.html
@@ -1,5 +1,6 @@
 <template>
   <require from="./home.scss"></require>
+    <compose class="canvas" view-model="./weather-background/weather-background"></compose>
   <header class="au-header">
     <div class="au-header__caption">
       <h1>Weather App</h1>
