--- a/src/resources/elements/home/weather-main/add-city/add-city.html
+++ b/src/resources/elements/home/weather-main/add-city/add-city.html
@@ -2,6 +2,6 @@
     <require from="./add-city.scss"></require>
     <div class="au-add-city__input">
         <input type="text" class="add-city__input" placeholder="Enter a name city" value.bind="city">
-        <button class="add-city__button" click.delegate="addCity(city)">add</button>
+        <button md-button class="add-city__button" click.delegate="addCity(city)">add</button>
     </div>
 </template>
