--- a/src/resources/elements/home/weather-main/weather-main.html
+++ b/src/resources/elements/home/weather-main/weather-main.html
@@ -9,7 +9,7 @@
   </div>
   <div class="au-main__list">
     <div class="list">
-      <div class="list__item item-weather ${city.class | setClassByWeather:city:city.weather:city.mode}" repeat.for="city of cities | pages:activePage:visiblePageLinks">
+      <div click.trigger="setActiveWeather($index)" class="list__item item-weather ${city.class | setClassByWeather:city:city.weather:city.mode} ${city.isActive ? 'active-item' : ''}" repeat.for="city of cities | pages:activePage:visiblePageLinks">
         <div class="item">
           <div class="item__main-information">
             <span class="item__name">${city.name} <span class="name__country">(${city.country})</span></span>
